# Focus-Tracker

./: .gitignore  .prettierignore  PROJECT.md  README.md  SETUP.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
Features Markdown/: Activity.md  Auth.md  Calendar.md  Dashboard.md  FocusSession.md  MementoMori.md  Settings.md  TaskCharts.md  Tasks.md
Sources Markdown/: DesktopApp.md  Extension.md
UI_Design/: Focus Tracker.html  app.js  styles.css
apps/api/: .env.example  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/20260614202226_init/: migration.sql
apps/api/prisma/migrations/20260614202307_focus_session_partial_unique/: migration.sql
apps/api/prisma/migrations/20260617020826_pairing_minted_apikey/: migration.sql
apps/api/scripts/: cleanup-synthetic.ts
apps/api/src/: app.module.ts  main.ts
apps/api/src/activity/: activity.controller.ts  activity.module.ts  activity.service.ts  tz.util.ts
apps/api/src/auth/: api-key-auth.guard.ts  auth.controller.ts  auth.module.ts  auth.service.ts  jwt-auth.guard.ts  password.service.ts  token.service.ts
apps/api/src/cli/: cli.module.ts  list-users.command.ts  main.ts  post-telemetry.command.ts  reset-password.command.ts  seed-user.command.ts
apps/api/src/common/decorators/: current-api-client.decorator.ts  current-user.decorator.ts
apps/api/src/common/pipes/: zod-body.pipe.ts
apps/api/src/devices/: devices.controller.ts  devices.module.ts  devices.service.ts  pairing.controller.ts  pairing.service.ts
apps/api/src/health/: health.controller.ts
apps/api/src/telemetry/: telemetry.controller.ts  telemetry.service.ts
apps/api/src/users/: me.controller.ts  users.module.ts  users.service.ts
apps/desktop/: .env.example  .gitignore  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: generate.py
apps/desktop/src-tauri/src/: capture.rs  commands.rs  config.rs  daemon.rs  errors.rs  events.rs  flusher.rs  keychain.rs  lib.rs  main.rs  outbox.rs  pairing.rs
apps/desktop/src/lib/: relative-time.ts  tauri.ts
apps/desktop/src/routes/: Paired.tsx  Unpaired.tsx
apps/web/: .env.example  index.html  package.json  vite.config.ts
apps/web/src/: index.css  main.tsx  router.tsx
apps/web/src/components/: AppShell.tsx  Modal.tsx
apps/web/src/hooks/: useTimezoneAutoDetect.ts
apps/web/src/lib/: activity-api.ts  api.ts  auth-api.ts  devices-api.ts  format-duration.ts  jwt.ts  me-api.ts  relative-time.ts  token-storage.ts
apps/web/src/routes/: Activity.tsx  Dashboard.tsx  Login.tsx  Settings.tsx
apps/web/src/routes/activity/: HourlyBreakdown.tsx  RangeSelector.tsx  RecentSwitches.tsx  SummaryBand.tsx  TopTargetsList.tsx  palette.ts
apps/web/src/routes/dashboard/: TodayActivityWidget.tsx
apps/web/src/routes/settings/: DevicesSection.tsx  PairDeviceModal.tsx  RevokeDeviceModal.tsx
apps/web/src/stores/: auth-store.ts
